gcc/testsuite/g++.dg/other/pr33558.C
/* { dg-do compile } */

class X {
  mutable int &q; /* { dg-error "cannot be declared 'mutable'" } */
};
